docs: add create user
